# claude-code-rs

./: .claude-cli-help-output  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  cli-version-check.yml  enforce-branch-policy.yml  publish.yml  release-please.yml
docs/: architecture.md  claude-cli.md  commands.md  releasing.md  testing.md
docs/superpowers/plans/: 2026-04-05-minimal-prototype.md  2026-04-06-config-expansion.md  2026-04-06-conversation-api.md  2026-04-06-feature-flags.md  2026-04-06-operational-improvements.md  2026-04-06-stream-json.md  2026-04-06-structured-output.md
docs/superpowers/specs/: 2026-04-05-minimal-prototype-design.md  2026-04-06-config-expansion-design.md  2026-04-06-conversation-api-design.md  2026-04-06-feature-flags-design.md  2026-04-06-operational-improvements-design.md  2026-04-06-stream-json-design.md  2026-04-06-structured-output-design.md
examples/: custom_preset.rs  multi_turn.rs  simple.rs  stream-all.rs  stream.rs  structured_output.rs
src/: client.rs  config.rs  conversation.rs  error.rs  lib.rs  stream.rs  structured.rs  types.rs
tests/: conversation_e2e.rs  e2e.rs
tests/fixtures/: error_response.json  stream_success.ndjson  structured_success.json  success.json
