[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "A Rust library for executing Claude Code CLI"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1", features = ["test-util"] }
