[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "A Rust library for executing Claude Code CLI"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", optional = true }
schemars = { version = "1", optional = true }

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1", features = ["test-util"] }

[features]
default = ["stream", "structured", "tracing"]
stream = ["dep:tokio-stream", "dep:async-stream"]
structured = ["dep:schemars"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "simple"

[[example]]
name = "stream"
required-features = ["stream"]

[[example]]
name = "stream-all"
required-features = ["stream"]

[[example]]
name = "multi_turn"
